// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component blocking ItemList renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderBottomColor": "#E0E0E0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingRight": 20,
      "paddingVertical": 18,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "flex": 1,
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "paddingHorizontal": 20,
      }
    }
  >
    The account is fake or not human
  </Text>
  <Icon
    color="#FF2E63"
    name="check-circle"
    size={20}
  />
</View>
`;

exports[`component blocking ItemList snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "borderBottomColor": "#E0E0E0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingRight": 20,
      "paddingVertical": 18,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "flex": 1,
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "paddingHorizontal": 20,
      }
    }
  >
    The account is fake or not human
  </Text>
  <Icon
    color="#FF2E63"
    name="check-circle"
    size={20}
  />
</ForwardRef>
`;

exports[`component blocking ItemListLarge renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderTopColor": "#E0E0E0",
      "borderTopWidth": 1,
      "opacity": 1,
      "paddingHorizontal": 22,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Icon
      color="#000"
      name="block"
      size={17}
    />
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "marginLeft": 15,
        }
      }
    >
      Block anonim indefinitely
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#828282",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "marginTop": 5,
        }
      }
    >
      You will not be able to see each other’s posts, or message each other. The user’s reach will be reduced across BetterSocial, in particular for this post.
    </Text>
  </View>
</View>
`;

exports[`component blocking ItemListLarge snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "borderTopColor": "#E0E0E0",
      "borderTopWidth": 1,
      "paddingHorizontal": 22,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Icon
      color="#000"
      name="block"
      size={17}
    />
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "marginLeft": 15,
        }
      }
    >
      Block anonim indefinitely
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#828282",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "marginTop": 5,
        }
      }
    >
      You will not be able to see each other’s posts, or message each other. The user’s reach will be reduced across BetterSocial, in particular for this post.
    </Text>
  </View>
</ForwardRef>
`;
